force-app/main/default/objects/EBooking__c/EBooking__c.object-meta.xml
<CustomObject>
    <label>Booking</label>
    <nameField>
        <displayFormat>EBK-{00000}</displayFormat>
        <label>E-Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>