force-app/main/default/objects/EBooking__c/fields/BL_Type__c.field-meta.xml
<CustomField>
    <fullName>BL_Type__c</fullName>
    <label>B/L Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>Picklist (Multi-Select)</fullName>
            </value>
            <value>
                <fullName>Telex Release</fullName>
            </value>
            <value>
                <fullName>Original</fullName>
            </value>
            <value>
                <fullName>Waybill</fullName>
            </value>
            <value>
                <fullName>Surrender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>