force-app/main/default/objects/EBooking__c/fields/Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status__c</fullName>
    <label>Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Info received</fullName>
                <default>true</default>
                <label>Info received</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Release to customer</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <label>Completely Cancelled</label>
            </value>
            <value>
                <fullName>Partial Cancelled</fullName>
                <label>Partially Cancelled</label>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>