force-app/main/default/objects/EBooking__c/fields/BookingPIC__c.field-meta.xml
<CustomField>
    <fullName>BookingPIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking PIC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>E_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>