force-app/main/default/objects/EBooking__c/fields/BookingType__c.field-meta.xml
<CustomField>
    <fullName>BookingType__c</fullName>
    <label>Booking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sea</fullName>
            </value>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Land/Trucking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>