force-app/main/default/objects/EBooking__c/fields/CancelDetail__c.field-meta.xml
<CustomField>
    <fullName>CancelDetail__c</fullName>
    <label>Cancel Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>