force-app/main/default/objects/EBooking__c/fields/CancelFee__c.field-meta.xml
<CustomField>
    <fullName>CancelFee__c</fullName>
    <label>Cancel Fee</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>