force-app/main/default/objects/EBooking__c/fields/CancelsPIC__c.field-meta.xml
<CustomField>
    <fullName>CancelsPIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancel&apos;s PIC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>E_Booking2</relationshipName>
    <type>Lookup</type>
</CustomField>