force-app/main/default/objects/EBooking__c/fields/Cargo_Closing_Time__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Closing_Time__c</fullName>
    <label>Cargo Closing Time</label>
    <type>DateTime</type>
</CustomField>