force-app/main/default/objects/EBooking__c/fields/Cargo_Unit__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Unit__c</fullName>
    <label>Cargo Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>