force-app/main/default/objects/EBooking__c/fields/CNTRCutofftime__c.field-meta.xml
<CustomField>
    <fullName>CNTRCutofftime__c</fullName>
    <label>Container Cut-off time</label>
    <type>DateTime</type>
</CustomField>