force-app/main/default/objects/EBooking__c/fields/CNTRFreetime__c.field-meta.xml
<CustomField>
    <fullName>CNTRFreetime__c</fullName>
    <label>Container Free time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>