force-app/main/default/objects/EBooking__c/fields/Commodity_Name__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Name__c</fullName>
    <label>Commodity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>