force-app/main/default/objects/EBooking__c/fields/Connecting_Vessel__c.field-meta.xml
<CustomField>
    <fullName>Connecting_Vessel__c</fullName>
    <label>Connecting Vessel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>