force-app/main/default/objects/EBooking__c/fields/Consolidator__c.field-meta.xml
<CustomField>
    <fullName>Consolidator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consolidator</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>E_Booking1</relationshipName>
    <type>Lookup</type>
</CustomField>