force-app/main/default/objects/EBooking__c/fields/Container_Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Container_Pickup_Date__c</fullName>
    <label>Container Pickup Date</label>
    <type>Date</type>
</CustomField>