force-app/main/default/objects/EBooking__c/fields/Container_Q_ty_3__c.field-meta.xml
<CustomField>
    <fullName>Container_Q_ty_3__c</fullName>
    <label>Container Q&apos;ty 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>