force-app/main/default/objects/EBooking__c/fields/Container_Qty_2__c.field-meta.xml
<CustomField>
    <fullName>Container_Qty_2__c</fullName>
    <label>Container Q’ty-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>