force-app/main/default/objects/EBooking__c/fields/Container_Quantity_Check__c.field-meta.xml
<CustomField>
    <fullName>Container_Quantity_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Container Quantity Check</label>
    <type>Checkbox</type>
</CustomField>