force-app/main/default/objects/EBooking__c/fields/ContainerQuantityCurrent__c.field-meta.xml
<CustomField>
    <fullName>ContainerQuantityCurrent__c</fullName>
    <formula>Container_Qty_1__c +  Container_Qty_2__c + Container_Q_ty_3__c -  JobsContainers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Container Quantity (Current)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>