force-app/main/default/objects/EBooking__c/fields/ContainerType3__c.field-meta.xml
<CustomField>
    <fullName>ContainerType3__c</fullName>
    <label>Container Type-3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContainerType</valueSetName>
    </valueSet>
</CustomField>