force-app/main/default/objects/EBooking__c/fields/Custom_Broker__c.field-meta.xml
<CustomField>
    <fullName>Custom_Broker__c</fullName>
    <label>Custom Broker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>