force-app/main/default/objects/EBooking__c/fields/CustomersPIC1__c.field-meta.xml
<CustomField>
    <fullName>CustomersPIC1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer&apos;s PIC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>E_Booking1</relationshipName>
    <type>Lookup</type>
</CustomField>