force-app/main/default/objects/EBooking__c/fields/DateofIssued__c.field-meta.xml
<CustomField>
    <fullName>DateofIssued__c</fullName>
    <label>Date of Issued</label>
    <type>Date</type>
</CustomField>