force-app/main/default/objects/EBooking__c/fields/DeadlineBookingCancel__c.field-meta.xml
<CustomField>
    <fullName>DeadlineBookingCancel__c</fullName>
    <label>Deadline Booking Cancel</label>
    <type>DateTime</type>
</CustomField>