force-app/main/default/objects/EBooking__c/fields/DEM__c.field-meta.xml
<CustomField>
    <fullName>DEM__c</fullName>
    <label>Demurage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>