force-app/main/default/objects/EBooking__c/fields/DemDeadline__c.field-meta.xml
<CustomField>
    <fullName>DemDeadline__c</fullName>
    <label>Dem Deadline</label>
    <type>Date</type>
</CustomField>