force-app/main/default/objects/EBooking__c/fields/DET__c.field-meta.xml
<CustomField>
    <fullName>DET__c</fullName>
    <label>Detention</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>