force-app/main/default/objects/EBooking__c/fields/DETDeadline__c.field-meta.xml
<CustomField>
    <fullName>DETDeadline__c</fullName>
    <label>DET Deadline</label>
    <type>Date</type>
</CustomField>