force-app/main/default/objects/EBooking__c/fields/Documentation_Service__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Service__c</fullName>
    <label>Documentation Service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Picklist (Multi-Select)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>