force-app/main/default/objects/EBooking__c/fields/Empty_Pickup_Place__c.field-meta.xml
<CustomField>
    <fullName>Empty_Pickup_Place__c</fullName>
    <label>Empty Pickup Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>