force-app/main/default/objects/EBooking__c/fields/ETA_At_Transit_Port__c.field-meta.xml
<CustomField>
    <fullName>ETA_At_Transit_Port__c</fullName>
    <label>ETA At Transit Port</label>
    <type>Date</type>
</CustomField>