force-app/main/default/objects/EBooking__c/fields/ETD_At_Transit_Port__c.field-meta.xml
<CustomField>
    <fullName>ETD_At_Transit_Port__c</fullName>
    <label>ETD At Transit Port</label>
    <type>Date</type>
</CustomField>