force-app/main/default/objects/EBooking__c/fields/ExternalSalesman__c.field-meta.xml
<CustomField>
    <fullName>ExternalSalesman__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Salesman</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Carrier__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>E_Booking2</relationshipName>
    <type>Lookup</type>
</CustomField>