force-app/main/default/objects/EBooking__c/fields/F_TMS_S_O__c.field-meta.xml
<CustomField>
    <fullName>F_TMS_S_O__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>F/TMS S/O</label>
    <referenceTo>FTMSSO__c</referenceTo>
    <relationshipName>E_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>