force-app/main/default/objects/EBooking__c/fields/Final_Destination_Text__c.field-meta.xml
<CustomField>
    <fullName>Final_Destination_Text__c</fullName>
    <label>Final Destination-Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>