force-app/main/default/objects/EBooking__c/fields/FinalDestination__c.field-meta.xml
<CustomField>
    <fullName>FinalDestination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Destination</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipName>E_Booking3</relationshipName>
    <type>Lookup</type>
</CustomField>