force-app/main/default/objects/EBooking__c/fields/Free_Time_at_POD__c.field-meta.xml
<CustomField>
    <fullName>Free_Time_at_POD__c</fullName>
    <label>Free Time at P.O.D</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>