force-app/main/default/objects/EBooking__c/fields/Freight_CollectPrepaid__c.field-meta.xml
<CustomField>
    <fullName>Freight_CollectPrepaid__c</fullName>
    <label>Freight Collect/Prepaid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>