force-app/main/default/objects/EBooking__c/fields/Freight_ForwarderNVOCC__c.field-meta.xml
<CustomField>
    <fullName>Freight_ForwarderNVOCC__c</fullName>
    <label>Freight Forwarder/NVOCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>