force-app/main/default/objects/EBooking__c/fields/Freight_Payer_Party_if_Collect__c.field-meta.xml
<CustomField>
    <fullName>Freight_Payer_Party_if_Collect__c</fullName>
    <label>Freight Payer Party if Collect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>