force-app/main/default/objects/EBooking__c/fields/Further_Routing__c.field-meta.xml
<CustomField>
    <fullName>Further_Routing__c</fullName>
    <label>Further Routing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>