force-app/main/default/objects/EBooking__c/fields/Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight__c</fullName>
    <label>Gross Weight</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>