force-app/main/default/objects/EBooking__c/fields/House_Booking_No__c.field-meta.xml
<CustomField>
    <fullName>House_Booking_No__c</fullName>
    <label>House Booking No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>