force-app/main/default/objects/EBooking__c/fields/HS_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>HS_Code_Text__c</fullName>
    <label>HS Code-Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>