force-app/main/default/objects/EBooking__c/fields/Intended_Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Intended_Shipping_Date__c</fullName>
    <label>Intended Shipping Date</label>
    <type>Date</type>
</CustomField>