force-app/main/default/objects/EBooking__c/fields/JobsContainers__c.field-meta.xml
<CustomField>
    <fullName>JobsContainers__c</fullName>
    <label>Container Quantity (Used)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>