force-app/main/default/objects/EBooking__c/fields/Laden_Return_Place__c.field-meta.xml
<CustomField>
    <fullName>Laden_Return_Place__c</fullName>
    <label>Laden Return Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>