force-app/main/default/objects/EBooking__c/fields/Master_Carrier_Consolidator__c.field-meta.xml
<CustomField>
    <fullName>Master_Carrier_Consolidator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Carrier/ Consolidator</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>E_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>