force-app/main/default/objects/EBooking__c/fields/MasterCarrierConsolidatorName__c.field-meta.xml
<CustomField>
    <fullName>MasterCarrierConsolidatorName__c</fullName>
    <formula>Master_Carrier_Consolidator__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Carrier Consolidator</label>
    <type>Text</type>
</CustomField>