force-app/main/default/objects/EBooking__c/fields/Overseas_Agent__c.field-meta.xml
<CustomField>
    <fullName>Overseas_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overseas Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>E_Booking2</relationshipName>
    <type>Lookup</type>
</CustomField>