force-app/main/default/objects/EBooking__c/fields/Place_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Payment__c</fullName>
    <label>Place of Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>