force-app/main/default/objects/EBooking__c/fields/Place_Of_Receipt_Text__c.field-meta.xml
<CustomField>
    <fullName>Place_Of_Receipt_Text__c</fullName>
    <label>Place Of Receipt-Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>