force-app/main/default/objects/EBooking__c/fields/PlaceofDelivery__c.field-meta.xml
<CustomField>
    <fullName>PlaceofDelivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Delivery</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipName>E_Booking5</relationshipName>
    <type>Lookup</type>
</CustomField>