force-app/main/default/objects/EBooking__c/fields/PlaceofDeliverysDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>PlaceofDeliverysDetailInformation__c</fullName>
    <label>Place of Delivery&apos;s Detail Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>