force-app/main/default/objects/EBooking__c/fields/PlaceofReceipt__c.field-meta.xml
<CustomField>
    <fullName>PlaceofReceipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Receipt</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipName>E_Booking4</relationshipName>
    <type>Lookup</type>
</CustomField>