force-app/main/default/objects/EBooking__c/fields/PlaceofReceiptsDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>PlaceofReceiptsDetailInformation__c</fullName>
    <label>Place of Receipt&apos;s Detail Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>