force-app/main/default/objects/EBooking__c/fields/PODAOA_Text__c.field-meta.xml
<CustomField>
    <fullName>PODAOA_Text__c</fullName>
    <label>P.O.D(A.O.A)-Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>