force-app/main/default/objects/EBooking__c/fields/PODAOD__c.field-meta.xml
<CustomField>
    <fullName>PODAOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.D(A.O.A)</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipName>E_Booking1</relationshipName>
    <type>Lookup</type>
</CustomField>