force-app/main/default/objects/EBooking__c/fields/PODformula__c.field-meta.xml
<CustomField>
    <fullName>PODformula__c</fullName>
    <formula>PODAOD__r.PortCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POD formula</label>
    <type>Text</type>
</CustomField>