force-app/main/default/objects/EBooking__c/fields/POLAOD_Text__c.field-meta.xml
<CustomField>
    <fullName>POLAOD_Text__c</fullName>
    <label>P.O.L(A.O.D)-Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>