force-app/main/default/objects/EBooking__c/fields/POLAODFormula__c.field-meta.xml
<CustomField>
    <fullName>POLAODFormula__c</fullName>
    <formula>Master_Carrier_Consolidator__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P.O.L.A.O.D</label>
    <type>Text</type>
</CustomField>