force-app/main/default/objects/EBooking__c/fields/POLAODsDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>POLAODsDetailInformation__c</fullName>
    <label>P.O.L(A.O.D)&apos;s Detail Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>