force-app/main/default/objects/EBooking__c/fields/POLformula__c.field-meta.xml
<CustomField>
    <fullName>POLformula__c</fullName>
    <formula>POLAOD__r.PortCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POL formula</label>
    <type>Text</type>
</CustomField>