force-app/main/default/objects/EBooking__c/fields/Previous_booking_number__c.field-meta.xml
<CustomField>
    <fullName>Previous_booking_number__c</fullName>
    <label>Previous booking number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>