force-app/main/default/objects/EBooking__c/fields/Reference_Price__c.field-meta.xml
<CustomField>
    <fullName>Reference_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Price</label>
    <referenceTo>ReferencePrice__c</referenceTo>
    <relationshipName>E_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>