force-app/main/default/objects/EBooking__c/fields/Request_from_Customer__c.field-meta.xml
<CustomField>
    <fullName>Request_from_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request from Customer</label>
    <referenceTo>Inquiry__c</referenceTo>
    <relationshipName>E_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>