force-app/main/default/objects/EBooking__c/fields/Requested_Wording_in_Destination__c.field-meta.xml
<CustomField>
    <fullName>Requested_Wording_in_Destination__c</fullName>
    <label>Requested Wording in Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>