force-app/main/default/objects/EBooking__c/fields/Requested_Wording_in_Origin__c.field-meta.xml
<CustomField>
    <fullName>Requested_Wording_in_Origin__c</fullName>
    <label>Requested Wording in Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>