force-app/main/default/objects/EBooking__c/fields/Requester_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Requester_Company_Name__c</fullName>
    <label>Requester Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>