force-app/main/default/objects/EBooking__c/fields/Sales_Man_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Man_Name__c</fullName>
    <label>Sales Man Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>