force-app/main/default/objects/EBooking__c/fields/Salesman__c.field-meta.xml
<CustomField>
    <fullName>Salesman__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesman</label>
    <referenceTo>User</referenceTo>
    <relationshipName>E_Booking1</relationshipName>
    <type>Lookup</type>
</CustomField>