force-app/main/default/objects/EBooking__c/fields/Shipper_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Company_Name__c</fullName>
    <label>Shipper Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>