force-app/main/default/objects/EBooking__c/fields/Shipper_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Tax_Code__c</fullName>
    <label>Shipper Tax Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>